@@ -1,5 +1,6 @@
 
 since kvt-0.16:
+  - session management (Matthias)
 
   - re-arranged help menu (Matthias)
 	
